Fixed overflow card.

--- a/s_01_src/110wbs_src/src/components/mlcs/Saver.scss
+++ b/s_01_src/110wbs_src/src/components/mlcs/Saver.scss
@@ -22,15 +22,15 @@
 
 
 
-  @layer utilities {
-    .hidden-scrollbar {
-      -ms-overflow-style: none; /* IE, Edge 対応 */
-      scrollbar-width: none; /* Firefox 対応 */
-    }
-    .hidden-scrollbar::-webkit-scrollbar {
-      /* Chrome, Safari 対応 */
-      display: none;
-    }
-  }
+  // @layer utilities {
+  //   .hidden-scrollbar {
+  //     -ms-overflow-style: none; /* IE, Edge 対応 */
+  //     scrollbar-width: none; /* Firefox 対応 */
+  //   }
+  //   .hidden-scrollbar::-webkit-scrollbar {
+  //     /* Chrome, Safari 対応 */
+  //     display: none;
+  //   }
+  // }
 
   // https://zenn.dev/nbr41to/articles/11efbc362a89ba
